create function export and function import and create function compareConfigStructures Check structure of config

--- a/src/html/config.html
+++ b/src/html/config.html
@@ -28,7 +28,7 @@
                     <td>
                       <div class="row">
                         <div class="kintoneplugin-table-td-control" id="">
-                          <label for="title-field"  class="buttonName" style="font-size: 14px;">Button Search<span
+                          <label for="title-field" class="buttonName" style="font-size: 14px;">Button Search<span
                               class="kintoneplugin-require "></span></label>
                           <div class="kintoneplugin-input-outer">
                             <input type="text" class="kintoneplugin-input-text ButtonName" id="ButtonName" />
@@ -36,7 +36,7 @@
                         </div>
 
                         <div class="kintoneplugin-table-td-control" id="">
-                          <label for="title-field"  class="InputName" style="font-size: 14px;">Input Name<span
+                          <label for="title-field" class="InputName" style="font-size: 14px;">Input Name<span
                               class="kintoneplugin-require "></span></label>
                           <div class="kintoneplugin-input-outer">
                             <input type="text" class="kintoneplugin-input-text InputName" id="InputName" />
@@ -56,7 +56,7 @@
                         </div>
 
                         <div class="kintoneplugin-table-td-control" id="condition">
-                          <label for="select_field_column"  class="condition" style="font-size: 14px;">Condition<span
+                          <label for="select_field_column" class="condition" style="font-size: 14px;">Condition<span
                               class="kintoneplugin-require ">*</span></label>
                           <div class="kintoneplugin-select-outer condition">
                             <div class="kintoneplugin-select">
@@ -91,6 +91,9 @@
       <button type="button" class="js-save-button kintoneplugin-button-dialog-ok" id="button_save">Save</button>
       <button type="button" class="js-cancel-button kintoneplugin-button-dialog-cancel cancel"
         id="cancel">Cancel</button>
+      <button type="button" class="js-save-button kintoneplugin-button-dialog-ok export" id="export">Export</button>
+      <button type="button" class="js-save-button kintoneplugin-button-dialog-ok import" id="import">Import</button>
+      <input type="file" id="fileInput" accept=".json" style="display: none;">
     </p>
   </div>
 </form>
