create function reacrete

--- a/src/html/config.html
+++ b/src/html/config.html
@@ -69,6 +69,10 @@
                           </div>
                         </div>
 
+                        <p class="kintoneplugin-row">
+                          <button type="button" class="js-reactios-button kintoneplugin-button-dialog-ok"
+                            id="reactios" style="margin-top: 8px; display: none;" >Recreate</button>
+                        </p>
                       </div>
                     </td>
                     <td class="kintoneplugin-table-td-operation operation-column">
